--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring-conf-proccessor.version>3.3.5</spring-conf-proccessor.version>
         <spring-test.version>3.3.5</spring-test.version>
         <xmlunit.vesrion>2.10.0</xmlunit.vesrion>
+        <telegrambots.version>6.9.7.1</telegrambots.version>
     </properties>
 
     <dependencies>
@@ -25,7 +26,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -50,7 +50,6 @@
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${spring-jpa.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
@@ -69,12 +68,16 @@
                 <scope>test</scope>
                 <version>${spring-test.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.xmlunit</groupId>
                 <artifactId>xmlunit-core</artifactId>
                 <scope>test</scope>
                 <version>${xmlunit.vesrion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots</artifactId>
+                <version>${telegrambots.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
