--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.3.5</version>
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>naumen-tests-tgbot</artifactId>
+    <artifactId>tests-tgbot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -19,8 +19,6 @@
         <spring-test.version>3.3.5</spring-test.version>
         <xmlunit.vesrion>2.10.0</xmlunit.vesrion>
         <telegrambots.version>6.9.7.1</telegrambots.version>
-        <hypersistence-utils-hibernate.version>3.8.3</hypersistence-utils-hibernate.version>
-        <jackson-module-jakarta-xmlbind-annotations.version>2.18.0</jackson-module-jakarta-xmlbind-annotations.version>
     </properties>
 
     <dependencies>
@@ -46,14 +44,6 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.hypersistence</groupId>
-            <artifactId>hypersistence-utils-hibernate-63</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
         </dependency>
     </dependencies>
 
@@ -98,16 +88,6 @@
                         <groupId>com.fasterxml.jackson.module</groupId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>io.hypersistence</groupId>
-                <artifactId>hypersistence-utils-hibernate-63</artifactId>
-                <version>${hypersistence-utils-hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-jakarta-xmlbind-annotations</artifactId>
-                <version>${jackson-module-jakarta-xmlbind-annotations.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
